# wirehair-rust-wrapper

./: Cargo.toml  build.rs
src/wirehair/: WirehairTools.h  wirehair.cpp
