[package]
name = "wirehair-wrapper"
version = "0.1.4"
authors = ["Alexander Vtyurin <senior.joinu@gmail.com>", "bwisn"]
edition = "2018"
build = "build.rs"
description = "Rust wrapper for https://github.com/catid/wirehair"
repository = "https://github.com/bwisn/wirehair-rust-wrapper"
keywords = ["fec", "fountain-codes", "raptorq"]
categories = ["api-bindings", "encoding"]
license = "MIT"

[build-dependencies]
cc = { version = "1.0" }
build-target = "0.4.0"

[dev-dependencies]
rand = { version = "0.7.0" }
